--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,15 @@
 
 	</build>
 <distributionManagement>
-
+	<snapshotRepository>
+		<id>snapshots</id>
+		<name>snapshots</name>
+		<url>http://35.164.51.6:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+	<repository>
+		<id>releases</id>
+		<name>releases</name>
+		<url>http://35.164.51.6:8081/repository/maven-releases/</url>
+	</repository>
 </distributionManagement>
 </project>
